--- a/semanticelements.html
+++ b/semanticelements.html
@@ -7,10 +7,10 @@
 
     <style>
         h1{
-           color: red; 
+           color:rosybrown; 
         }
         p{
-            background-color: red;
+            background-color:beige;
             color: white;
         }
         
