--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </main>
     <footer><p>
-        &copy; 2025 by Moses. All rights reserved.
+        &copy; 2025 by Moses Tandu 24/BCC/BU/R/0016. All rights reserved.
     </p></footer>
     
 </body>
