--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <Header>
-        <h1>Learning Git and Github</h1>
+        <h1>Best Way To Know Github</h1>
     </Header>
     <nav>
         <ul>
-            <li>Git</li>
-            <li>Githhub</li>
-            <li>Git Desktop h</li>
-            <li>Git Desktop pagesll</li>
+            <li>Know the basis</li>
+            <li>Go to websites</li>
+            <li>know your limit</li>
+            <li>Consistency</li>
         </ul>
     </nav>
     <main style="float:left">
